--- a/CustomerManagement.Application/CustomerManagement.Application.csproj
+++ b/CustomerManagement.Application/CustomerManagement.Application.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\CustomerManagement.Domain\CustomerManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="11.1.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
