complete working version with docker + DB setup

--- a/CustomerManagement.API/appsettings.json
+++ b/CustomerManagement.API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=CustomerManagementDb;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
+  "MasterConnection": "Server=sqlserver;Database=master;User Id=sa;Password=Your_password123!;TrustServerCertificate=True;",
+  "DefaultConnection": "Server=sqlserver;Database=CustomerManagementDb;User Id=sa;Password=Your_password123!;TrustServerCertificate=True;"
+},
   "AllowedHosts": "*"
 }
